# training

./: Cargo.toml  README.md  build.rs
files/: output.txt
src/: example.rs  main.rs  readinputfile.rs  readoutputfile.rs
src/protos/: example.proto
