[package]
name = "rust-protobuf-example"
version = "1.2.2"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
readme = "README.md"
description = "Working example using Protocol Buffers (protobufs)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3"
clap="3"
base64 = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
